--- a/style.css
+++ b/style.css
@@ -43,12 +43,15 @@ main {
     border: 1px solid skyblue;
     outline: 0;
     cursor: pointer;
-    border-radius: 0.9rem;
+    border-radius: 0.5rem;
     background-color: rgba(204, 255, 204, 0.616);
 }
 .side-menu button {
     width: 100%;
     height: 4rem;
+}
+.bottom-menu button {
+    margin: 0 0.6rem;
 }
 .gpcont {
     grid-column: 2/3;
@@ -57,6 +60,7 @@ main {
     box-shadow: 0 0 0.3rem 0.2rem #2f81a16e;
     border-radius: 0.4rem;
     margin: 2vh 0;
+    padding-bottom: 3vh;
 }
 .gpcont-header{
     display: flex;
@@ -84,17 +88,13 @@ main {
     padding: 0.3rem 1rem;
     line-height: 2rem;
 }
-.course-table {
-    display: flex;
-    flex-flow: row wrap;
-}
 .gpcont-footer {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
 }
 .semester-gp {
-    padding: 1rem 1rem;
+    padding: 1rem 0.7rem;
     display: flex;
 }
 .sem-gpa {
@@ -129,7 +129,70 @@ main {
 .grade-select {
     cursor: pointer;
 }
+.course-table {
+    display:flex;
+    padding: 0 1rem;
+    margin-top: 1rem;
+}
+.course-table-items {
+    width: 95%;
+    display: flex;
+    padding: 0.5rem 0;
+    border: 1px solid #ccc;
+    border-right: none;
+}
+.course-name {
+    flex: 0 0 50%;
+    padding-left: 0.8rem;
+}
+.course-grade {
+    flex-basis: 38%;
+    text-align: center;
+}
+.course-credits {
+    text-align: center;
+}
+.remove-course {
+    border: 1px solid #ccc;
+    border-left: none;
+    padding: 0.5rem 0.4rem 0.7rem 0;
+    cursor: pointer;
+}
+@media(max-width:1200px){
+    main {
+        grid-template-columns: 1fr 5fr 1fr;
+    }
+    .gpitem p {
+        padding: 0.3rem 0.5rem;
+    }
+}
 @media(max-width:700px){
     .side-menu{visibility: hidden;}
     .bottom-menu{visibility: visible;}
+
+    main {
+        grid-template-columns: 1fr 20fr 1fr;
+    }
+    .gpitem p:nth-child(1){
+        grid-column: span 3;
+    }
+    .gpitem {
+        grid-template-columns:2fr 1fr;
+        padding: 0 0.5rem;
+    }
+    .gpitem p {
+        padding: 0.3rem 0.5rem;
+    }
+    .semester-gp {
+        padding: 1rem 0 0.2rem 0.5rem;
+    }
+    .add-course {
+        align-self: flex-end;
+        margin: 0 1rem 0 0;
+    }
+    .gpcont-footer {
+        padding: 0;
+        display: flex;
+        flex-flow: column wrap;
+    }
 }
