--- a/css/position.css
+++ b/css/position.css
@@ -9,14 +9,25 @@ aside {
   grid-row: 2 / 3;
   background-color: #1ab5f3;
   color: white;
+  position: fixed;
+  height: 100%;
+  top: 38;
+  padding: 0 0.4rem;
 }
 header{
   background-color: #2d92b9;
   grid-column: 1 / -1;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 main {
   grid-column: 2 / -1;
   background-color: #87cfeb70;
+  margin: 3rem 0;
+}
+main section:nth-child(2){
+  margin-bottom: 15vh;
 }
 @media (max-width:700px){
   main {
@@ -25,6 +36,10 @@ main {
   aside {
     grid-row: 3 / 4;
     grid-column: 1 / -1;
+    top: 93vh;
+    width: 100%;
+    height: 7%;
+    z-index: 2;
   }
   .container {
     grid-template-columns: 1fr;
