--- a/css/pop-ups.css
+++ b/css/pop-ups.css
@@ -1,16 +1,79 @@
-.years-popup {
+.levels-modal {
+  display: none;
   position: absolute;
-  top: 30;
-  left: 50;
-  width: 8rem;
-  background-color: white;
-  color: black;
-  visibility: hidden;
+  z-index: 3; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4); 
 }
-.years-wrapper {
+
+.levels {
+  background-color: #fefefe;
+  margin: 25vh auto; 
+  border: 1px solid #888;
+  width: 17rem;
+  background-color: rgba(255, 255, 255, 0.53);
+  padding: 0.5rem 0;
+}
+.level {
+  display: flex;
+  justify-content: space-around;
+  background-color: #fff;
+  margin: 0.5rem 1rem;
+  padding: 0.5rem 0;
+  cursor: pointer;
+}
+.level:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.delete-level {
+  width: 1rem;
+  color: #ff0000a1;
+  cursor: pointer;
+}
+.add-level-form {
+  justify-content: space-evenly !important;
+}
+.add-level-but, .close-levels-but {
+  background-color: #1ab6f3;
+  color: white;
+  padding: 0.2rem 0.4rem;
+  border-radius: 0.2rem;
+}
+.add-level-inp {
+  border: 1px solid rgba(0, 0, 0, 0.178) !important;
+  width: 60%;
+  font-size: 0.8rem;
+  padding: 0.4rem 0.4rem;
+  text-align: center;
+}
+
+.close-levels{
+  justify-content: flex-end;
+}
+.close-levels-but {
+  margin: 0 0.8rem; 
+}
+.close-levels-but:hover {
+  background-color: #ff0000a1;
+}
+.active-lev-cont {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   padding: 0;
-  margin: 0;
+  background-color: #1ab6f3;
+  color:white;
 }
-.years-wrapper:hover > .years-popup, .years-popup:hover {
-  visibility: visible;
+.current-level {
+  background-color: #1ab6f3;
+  color:white;
+}
+.active-lev-cont:hover {
+  background-color: #1ab6f3;
 }
